# mi_01_attention_patterns_scratch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: 01_manual_attention.py  02_previous_token.py  03_induction_heads.py  04_qk_ov_circuits.py
smoke_test/: smoke_test.py
src/: __init__.py  attention_manual.py  model_loader.py  visualization.py
