[project]
name = "mi-01-attention-patterns-scratch"
version = "0.1.0"
description = "MI-01 - Attention Patterns from Scratch: Finding Previous-Token and Induction Heads in GPT-2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
